src/modules/10-common/components/DocsChat/DocsChat.module.scss
/*
 * Copyright 2023 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.container {
  height: 100vh;
  display: flex;
  flex-direction: column;

  .header {
    margin: var(--spacing-medium) var(--spacing-large) 0px;
    padding-bottom: var(--spacing-medium);
    border-bottom: 1px solid var(--grey-200);
  }

  .errorLink {
    color: var(--ai-purple-900);
  }

  .messagesContainer {
    overflow-y: auto;
    overflow-x: hidden;
    padding: 0 var(--spacing-large);
    margin-top: auto;
    display: flex;
    flex-direction: column;

    .messageContainer {
      margin: var(--spacing-small) 0;
      display: flex;
      align-items: start;

      .aidaIcon {
        z-index: 2;
      }

      .messageWrapper {
        width: 80%;
      }

      .message {
        padding: var(--spacing-small) var(--spacing-large);
        display: inline-block;
        word-wrap: break-word;
        line-height: 20px;
        overflow-x: auto;

        p {
          margin: 0;
        }

        &.loader {
          padding: var(--spacing-medium) var(--spacing-xxlarge);
        }
      }

      &.harness {
        justify-content: left;

        .message {
          border-radius: 0px 24px 24px 24px;
          background: var(--grey-50);
          border: 4px solid var(--ai-purple-100);
        }
      }

      &.user {
        justify-content: right;

        .messageWrapper {
          display: flex;
          justify-content: right;
        }

        .message {
          border-radius: 24px 0px 24px 24px;
          background: var(--grey-100);
        }
      }
    }
  }

  .inputContainer {
    padding: var(--spacing-small);
    margin-bottom: var(--spacing-medium);
    position: relative;

    .input {
      width: 100%;
      padding: var(--spacing-small) var(--spacing-xxxlarge);
      min-height: var(--spacing-xxxlarge);
      border: 1px solid var(--grey-200);
      line-height: 18px;
    }

    .submitButton {
      border: none;
      padding: var(--spacing-small);
      background: none;
      position: absolute;
      right: var(--spacing-small);
      svg > path {
        color: var(--ai-purple-800);
      }
    }
  }
}

.chatMenuButton {
  position: absolute;
  padding: 2px 7px 7px 7px;
  left: var(--spacing-medium);
  top: var(--spacing-medium);
  border: none;
  border-radius: 50%;
  background-color: var(--grey-500);
  svg > path {
    color: var(--white);
  }
}

.dotflashing {
  position: relative;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: var(--ai-purple-100);
  animation: dotflashing 1s infinite linear alternate;
  animation-delay: 0.5s;
}
.dotflashing::before,
.dotflashing::after {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}
.dotflashing::before {
  left: -15px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: var(--ai-purple-100);
  animation: dotflashing 1s infinite alternate;
  animation-delay: 0s;
}
.dotflashing::after {
  left: 15px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: var(--ai-purple-100);
  animation: dotflashing 1s infinite alternate;
  animation-delay: 1s;
}

@keyframes dotflashing {
  0% {
    background-color: var(--ai-purple-100);
  }
  50%,
  100% {
    background-color: var(--ai-purple-600);
  }
}

